--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "myreactnativesdkexampleremi",
   "version": "0.0.1",
-  "private": true,
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
