--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myreactnativesdkexampleremi",
-  "version": "0.0.2",
-  "main": "lib/index.js",
+  "version": "0.0.3",
+  "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
